# LocationTracker

./: Cargo.toml  LICENSE  README  build.rs  memory.x  openocd.cfg
.cargo/: config
frtos_cfg/: FreeRTOSConfig.h
src/: handlers.rs  main.rs  sensors.rs
