[package]
name = "location_tracker"
version = "0.1.0"
authors = ["I am the Carl <jamescarl96@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
log = "0.4"
switch-hal = "0.3"
freertos-rust = "0.1"

[dependencies.cortex-m-log]
version = "0.6"
features = ["semihosting", "log-integration"]

[dependencies.stm32f3xx-hal]
version = "0.5"
features = ["stm32f303xc", "rt"]

[build-dependencies]
freertos-cargo-build = "0.1"

[[bin]]
name = "location_tracker"
test = false
bench = false

[profile.dev]
debug = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations