[package]
name = "location_tracker"
version = "0.1.0"
authors = ["I am the Carl <jamescarl96@gmail.com>"]
edition = "2018"

[dependencies]
# Cortex core stuff.
cortex-m = "0.6"
cortex-m-rt = "0.6"

# MCU specific stuff.
stm32f3xx-hal =  {version = "0.5", features = ["stm32f303xc", "rt"] }

# Higher level abstractions.
log = "0.4.*"
switch-hal = "0.3.*"
freertos-rust = "0.1.*"
lsm303dlhc = "0.2.*"
l3gd20 = "0.2.*"
fixed = "1.1.*"
cordic = "0.1.*"

[dependencies.itm_logger]
version = "0.1"
features = ["perform-enabled-checks"]

[dependencies.simba]
version = "0.1.*"
default-features = false
features = ["partial_fixed_point_support"]

[dependencies.nalgebra]
version = "0.21.*"
default-features = false

[build-dependencies]
freertos-cargo-build = "0.1"

[patch.crates-io]
# TODO remove all of these as things get updated.
# Add that no_std support to nalgebra.
cordic = { git = "https://github.com/crazycarl/cordic.git" }
# We need a newer version of Simba to get vectors working with fixed types.
simba = { git = "https://github.com/rustsim/simba.git" }
#simba = { path = "../simba" }

# Added features.
lsm303dlhc = { git = "https://github.com/crazycarl/lsm303dlhc.git", branch = "read_status_register" }

# Fixed a bug. I don't think the main branch is ever going to implement it.
l3gd20 = { git = "https://github.com/bobgates/l3gd20" }

[[bin]]
name = "location_tracker"
test = false
bench = false

[profile.dev]
debug = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations